--- a/ipl.html
+++ b/ipl.html
@@ -25,7 +25,7 @@ table,td,th{
 <tr>
 <td>1</td>
 <td>MI</td>
-<td><a href="https://www.mumbaiindians.com/"target="_blank"> <img src="../Mumbai-Indians-Logo.jpg" height="50" width="50"></td>
+<td><a href="https://www.mumbaiindians.com/"target="_blank"> <img src="Mumbai-Indians-Logo.jpg" height="50" width="50"></td>
 <td>7</td>
 <td>7</td>
 <td>0</td>
@@ -35,7 +35,7 @@ table,td,th{
 <tr>
 <td>2</td>
 <td>srh</td>
-<td> <img src="../srh.jpeg"height="50" width="50"></td>
+<td> <img src="srh.jpeg"height="50" width="50"></td>
 <td>7</td>
 <td>5</td>
 <td>2</td>
@@ -45,7 +45,7 @@ table,td,th{
 <tr>
 <td>3</td>
 <td>rr</td>
-<td><img src="../rr.png"height="50" width="50"></td>
+<td><img src="rr.png"height="50" width="50"></td>
 <td>7</td>
 <td>4</td>
 <td>3</td>
@@ -55,7 +55,7 @@ table,td,th{
 <tr>
 <td>4</td>
 <td>csk</td>
-<td><img src="../csk.jpeg"height="50" width="50"></td>
+<td><img src="csk.jpeg"height="50" width="50"></td>
 <td>7</td>
 <td>3</td>
 <td>4</td>
@@ -65,7 +65,7 @@ table,td,th{
 <tr>
 <td>5</td>
 <td>rcb</td>
-<td><img src="../rcb.jpeg"height="50" width="50"></td>
+<td><img src="rcb.jpeg"height="50" width="50"></td>
 <td>7</td>
 <td>3</td>
 <td>4</td>
@@ -75,7 +75,7 @@ table,td,th{
 <tr>
 <td>6</td>
 <td>punjab</td>
-<td><img src="../punjab.png"height="50" width="50"></td>
+<td><img src="punjab.png"height="50" width="50"></td>
 <td>7</td>
 <td>2</td>
 <td>6</td>
